--- a/src/styles.css
+++ b/src/styles.css
@@ -1,180 +1,161 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;0,900;1,500;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;0,600;0,900;1,500;1,600;1,900&display=swap');
 
-header{
-  display: flex;
-  justify-content: space-between;
-  padding: 15px;
-  box-shadow: rgb(204, 204, 204) 0px 1px 1px 0px;
-  background-color: rgb(255, 255, 255);
+
+body{
+  font-family: 'Raleway', sans-serif;
+  background: #efefef;
+  margin: 0px;
+}
+
+#latest-post-section{
+  width: 70%;
+  margin: 0px auto;
+  margin-top: 30px;
+}
+
+.CategoryFilterSection__FilterIcon__2e2cL{
+  display: inline;
+  margin-top: 5px;
+  font-family : Raleway, sans-serif;
+height : 25px;
+}
+
+
+
+.filter-all-name{
+  background-color: #0084ff;
+  display: inline-block;
+  font-size: 12px;
+  border: 1px solid rgb(0, 132, 255);
+  padding: 5px 15px;
+  color: #fff;
+  border-radius: 15px;
+  cursor : pointer;
+  margin: 5px;
+  width: auto;
+}
+
+.filter-name:hover{
+  color: white;
+  background-color: #0084ff;
+}
+
+.filter-name{
+  display: inline-block;
+  font-size: 12px;
+  border: 1px solid rgb(0, 132, 255);
+  padding: 5px 15px;
+  color: rgb(0, 132, 255);
+  border-radius: 15px;
+  cursor : pointer;
+  margin: 5px;
+  width: auto;
+}
+
+.LatestPosts__LatestPostHeading__1-yOc{
+  width: fit-content;
+  margin: 0;
+  font-family: Raleway,sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.25;
+  letter-spacing: -.6px;
+  text-align: left;
+  color: #000;
 }
 
 #left-header-section{
   display: flex;
-  margin-left: 40px;
 }
 
-.filter-text{
-  display: inline-block;
-  font-size: 12px;
-  border: 1px solid #0084ff;
-  border-radius: 15px;
-  color: #0084ff;
-  padding: 6px 14px;
-  width: auto;
-  margin: 5px;
+
+header{
+  display: flex;
+  justify-content: space-between;
+  background-color: #fff;
+  box-shadow : rgb(204, 204, 204) 0px 1px 1px 0px
+}
+
+.dropdown-icon{
+  margin-left: 8px;
+  margin-bottom: 10px;
+  font-size: 20px;
+}
+
+
+.BlogNavigationLinks__EdyodaText__11wl2 {
+  min-width: 23em;
+  opacity: .6;
+  font-family: Raleway,sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1;
+  letter-spacing: .4px;
+  color: rgba(0,0,0,.6);
+  margin-right: 50px;
+   display: flex;  
+   align-items: center;
+   padding-top: 5px;
+}
+
+#dropdown{
+  margin-left: 100px;
+  display: flex;
+  align-items: center;
+}
+
+button{
+  box-sizing: border-box;
+  border: none;
   cursor: pointer;
-}
-
-.all{
   color: #fff;
-  background-color: #0084ff;
-}
-
-.filter-text:hover{
-  color: #fff;
-  background-color: #0084ff;
+  margin-right: 100px;
+  margin-top: 20px;
+  outline: none;
+  font-family: Raleway,sans-serif;
+  font-size: .9em;
+  font-weight: 600;
+  font-style: normal;
+  font-stretch: normal;
+  letter-spacing: .03em;
+  background: #0084ff;
+  background: -webkit-linear-gradient(269deg,#0048ff,#0096ff);
+  background: -webkit-linear-gradient(181deg,#0048ff,#0096ff);
+  background: -o-linear-gradient(181deg,#0048ff,#0096ff);
+  background: linear-gradient(269deg,#0048ff,#0096ff);
+  padding: 10px 20px;
+  border-radius: 40px;
+ 
 }
 
 #right-header-section{
   display: flex;
-  margin-right: 40px;
-}
-
-.blog-card{
-  width: calc(33% - 25px);
-  border: 1px solid rgba(0, 168, 255, 0.3);
-  margin: 10px;
-  background-color: rgb(255, 255, 255);
-}
-
-.blog-details{
-  padding: 15px;
-}
-
-.blog-image{
-  width: 100%;
-  height: 184px;
-}
-
-.blog-author{
-  color : rgb(0, 150, 255);
-cursor : pointer;
-font-family : Raleway;
-font-size : 14.4px;
-font-weight : 500;
 }
 
 
-.blog-description{
-  opacity: .5;
-  font-family: Raleway;
-  font-size: 14px;
-  font-weight: 400;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.43;
-  letter-spacing: .35px;
-  text-align: left;
-  color: #000;
-}
-
-.blog-title{
-  margin: 0px;
-}
-
-#blog-section{
-  display: flex;
-  flex-wrap: wrap;
-}
 
 #logo{
   font-size: 32px;
-  color: #0084ff;
+  color : rgb(0, 132, 255);
   font-weight: 1000;
-  margin-bottom: -5px;
-  /* font-family: Raleway,sans-serif;
-  font-size: 24px;
-  font-weight: 900;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.08;
-  letter-spacing: -.9px;
-  text-align: left;
-  background-image: linear-gradient(269deg,#0048ff,#0096ff),linear-gradient(#000,#000);
-  color: #0084ff;
-  width: auto;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; */
+  margin-bottom: -1px;
 }
 
 #logo-story{
-  margin: 0px;
+  font-family: Raleway,sans-serif;
+  font-size: 1em;
   font-weight: 500;
   font-style: italic;
+  font-stretch: normal;
+  line-height: .8;
+  letter-spacing: .9px;
 }
 
 ul{
   list-style-type: none;
-  cursor: pointer;
-  text-align: left;
-}
-
-#dropdown{
-  display: flex;
-  align-items: center;
-  padding-left: 50px;
-  font-weight  : 500;
-}
-
-#dropdown-text{
-  color: #000;
-}
-.dropdown-icon{
-  padding: 0 8px;
-  font-size: 20px;
-}
-
-#site-info{
-  opacity: 0.6;
-  letter-spacing: 0.4px;
-  display: flex;
-  padding-right: 80px;
-  padding-top: 20px;
-}
-
-button{
-  background-color: #0084ff;
-  color: white;
-  border: none;
-  padding: 0px 30px;
-  border-radius: 40px;
-  cursor: pointer;
-}
-
-.Button__Button__QI7b2{
-  display: flex;
-  background: linear-gradient(269deg,#0048ff,#0096ff);
-  box-sizing: border-box;
-    border: none;
-    cursor: pointer;
-    font-weight: 600;
-    font-style: normal;
-    font-stretch: normal;
-    letter-spacing: .03em;
-    color: #fff;
-    outline: none;
-    font-family: Raleway,sans-serif;
-    padding: 20px;
-    margin-top: 18px;
-}
-body{
-  font-family: 'Raleway', sans-serif;
-  background: #efefef;
-}
-
-#latest-post-section{
-  margin: 0px auto;
-  width: 70%;
-  margin-top: 20px;
   
 }
