--- a/src/styles.css
+++ b/src/styles.css
@@ -1,161 +1,158 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,500;0,600;0,900;1,500;1,600;1,900&display=swap');
 
+header{
+  box-shadow: rgb(204, 204, 204) 0px 1px 1px 0px;
+  display: flex;
+  justify-content: space-between;
+  background-color: rgb(255, 255, 255);
+}
 
 body{
-  font-family: 'Raleway', sans-serif;
-  background: #efefef;
   margin: 0px;
-}
-
-#latest-post-section{
-  width: 70%;
-  margin: 0px auto;
-  margin-top: 30px;
-}
-
-.CategoryFilterSection__FilterIcon__2e2cL{
-  display: inline;
-  margin-top: 5px;
   font-family : Raleway, sans-serif;
-height : 25px;
+  background: #efefef;
 }
 
-
-
-.filter-all-name{
-  background-color: #0084ff;
-  display: inline-block;
-  font-size: 12px;
-  border: 1px solid rgb(0, 132, 255);
-  padding: 5px 15px;
-  color: #fff;
-  border-radius: 15px;
-  cursor : pointer;
-  margin: 5px;
-  width: auto;
-}
-
-.filter-name:hover{
-  color: white;
-  background-color: #0084ff;
-}
-
-.filter-name{
-  display: inline-block;
-  font-size: 12px;
-  border: 1px solid rgb(0, 132, 255);
-  padding: 5px 15px;
-  color: rgb(0, 132, 255);
-  border-radius: 15px;
-  cursor : pointer;
-  margin: 5px;
-  width: auto;
-}
-
-.LatestPosts__LatestPostHeading__1-yOc{
-  width: fit-content;
-  margin: 0;
-  font-family: Raleway,sans-serif;
-  font-size: 24px;
-  font-weight: 600;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.25;
-  letter-spacing: -.6px;
-  text-align: left;
-  color: #000;
+.dropdown{
+font-size: 20px;
+padding-left: 5px;
 }
 
 #left-header-section{
   display: flex;
-}
-
-
-header{
-  display: flex;
+  margin-left: 70px;
+  width: 30%;
+  height: 100%;
   justify-content: space-between;
-  background-color: #fff;
-  box-shadow : rgb(204, 204, 204) 0px 1px 1px 0px
-}
-
-.dropdown-icon{
-  margin-left: 8px;
-  margin-bottom: 10px;
-  font-size: 20px;
-}
-
-
-.BlogNavigationLinks__EdyodaText__11wl2 {
-  min-width: 23em;
-  opacity: .6;
-  font-family: Raleway,sans-serif;
-  font-size: 15px;
-  font-weight: 500;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1;
-  letter-spacing: .4px;
-  color: rgba(0,0,0,.6);
-  margin-right: 50px;
-   display: flex;  
-   align-items: center;
-   padding-top: 5px;
-}
-
-#dropdown{
-  margin-left: 100px;
-  display: flex;
   align-items: center;
+
 }
 
-button{
-  box-sizing: border-box;
-  border: none;
-  cursor: pointer;
-  color: #fff;
-  margin-right: 100px;
-  margin-top: 20px;
-  outline: none;
-  font-family: Raleway,sans-serif;
-  font-size: .9em;
-  font-weight: 600;
-  font-style: normal;
-  font-stretch: normal;
-  letter-spacing: .03em;
-  background: #0084ff;
-  background: -webkit-linear-gradient(269deg,#0048ff,#0096ff);
-  background: -webkit-linear-gradient(181deg,#0048ff,#0096ff);
-  background: -o-linear-gradient(181deg,#0048ff,#0096ff);
-  background: linear-gradient(269deg,#0048ff,#0096ff);
-  padding: 10px 20px;
-  border-radius: 40px;
- 
+main{
+  width: 70%;
+  margin: 30px auto;
 }
+
+.filter-all{
+  /* From styles */
+  width: auto;
+    font-size: .75em;
+    color: #0084ff;
+    padding: 6px 16px;
+    border-radius: 15px;
+    border: 1px solid #0084ff;
+    margin: 5px;
+    cursor: pointer;
+    background: linear-gradient(269deg,#0048ff,#0096ff);
+    color: #fff;
+}
+
+#filter-wrapper{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.filter-name{
+  width: auto;
+    font-size: .75em;
+    color: #0084ff;
+    padding: 6px 16px;
+    border-radius: 15px;
+    border: 1px solid #0084ff;
+    margin: 5px;
+    cursor: pointer;
+}
+
+.filter-name:hover{
+  background: linear-gradient(269deg,#0048ff,#0096ff);
+  color: #fff;
+}
+
+.LatestPosts__LatestPostHeading__1-yOc{
+  width: fit-content;
+    margin: 0;
+    font-family: Raleway,sans-serif;
+    font-size: 24px;
+    font-weight: 600;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1.25;
+    letter-spacing: -.6px;
+    text-align: left;
+    color: #000;
+}
+
+#stories{
+
+  /* From styles  */
+  font-size : 16px;
+font-stretch : 100%;
+font-style : italic;
+font-weight  : 500;
+height : 12.8px;
+letter-spacing : 0.9px;
+line-height : 12.8px;
+color : rgb(0, 0, 0);
+cursor : pointer;
+display : block;
+font-family : Raleway, sans-serif;
+}
+
+#logo{
+  /* OWn  */
+font-size: 32px;
+font-weight: 1000;
+color: #0084ff;
+}
+
+
 
 #right-header-section{
   display: flex;
+  margin-right: 80px;
+  width: 35%;
+  justify-content: space-between;
+  align-items: center;
+
 }
 
-
-
-#logo{
-  font-size: 32px;
-  color : rgb(0, 132, 255);
-  font-weight: 1000;
-  margin-bottom: -1px;
+#button{
+    font-size : 12px;
+    border-radius: 25px;
+    box-sizing: border-box;
+    border: none;
+    cursor: pointer;
+    padding: 15px 20px;
+    color: #fff;
+    outline: none;
+    font-family: Raleway,sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    letter-spacing: .03em;
+    background: #0084ff;
+    background: -webkit-linear-gradient(269deg,#0048ff,#0096ff);
+    background: -webkit-linear-gradient(181deg,#0048ff,hsl(205, 100%, 50%));
+    background: -o-linear-gradient(181deg,#0048ff,#0096ff);
+    background: linear-gradient(269deg,#0048ff,#0096ff);
 }
 
-#logo-story{
-  font-family: Raleway,sans-serif;
-  font-size: 1em;
-  font-weight: 500;
-  font-style: italic;
-  font-stretch: normal;
-  line-height: .8;
-  letter-spacing: .9px;
+.BlogNavigationLinks__EdyodaText__11wl2{
+  /* Site  */
+  min-width: 23em;
+    opacity: .6;
+    font-family: Raleway,sans-serif;
+    font-size: 15px;
+    font-weight: 500;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: 1;
+    letter-spacing: .4px;
+    text-align: left;
+    color: rgba(0,0,0,.6);
+    margin-top: 0.5em;
 }
+
 
 ul{
   list-style-type: none;
-  
 }
